@@ -14,6 +14,7 @@
 * Updated README file.
 * Added heartbeat timeout to Server.
 * Implemented SphTP message structure.
+* Added heartbeat sending to Server.
 
 SphereSim 3.0.4:
 * Added #endif comments.
